<resources>
    <string name="app_name">MySchedules</string>
    <string name="action_autorenew">Update</string>
    <string name="action_settings">Setting</string>
    <string name="schedule">Schedule</string>

    <string name="other">Other</string>
    <string name="setting">Setting</string>
    <string name="about_program">About program</string>
    <string name="schedule_setting">Schedule setting</string>


    <string name="for_test_big_string">Big string for test. Hello world!!!</string>
    <string name="for_test_description_lesson">Лабораторное занятие   503ан, 503н, 503н</string>
    <string name="for_test_name_lesson">Архитектура электронно-вычислительных машин (ЭТО МАКЕТ)</string>
    <string name="for_test_teachers_lesson">ст. преп. Гончаров В.М.,\nасс. Павлова И.А.,\nасс. Павлова И.А.</string>
    <string name="for_test_time1">12:30 – 13:00</string>
    <string name="for_test_time2">13:20 – 14:00</string>

    <string name="teachers_name">Teachers name:</string>
    <string name="loading">Loading....</string>
    <string name="error">Error</string>
    <string name="ok">OK</string>
    <string name="failedConnect">Failed to connect to the Internet!</string>
    <string name="schedule_save">Schedule save!</string>
    <string name="numerator">Числ.</string>
    <string name="denominator">Знам.</string>
    <string name="all">All</string>
    <string name="information_about_the_lesson">Information about the lesson:</string>
    <string name="time">Time:</string>
    <string name="description_for_image_number">This image number pairs</string>
    <string name="this_desc_image">This desc image.</string>
    <string name="example_time">00:00:00</string>

    <string name="pair_start">Pairs start!!</string>
    <string name="pair_end">Pairs end!!</string>
</resources>
