<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:minHeight="100dp"
    android:orientation="vertical"
    tools:targetApi="jelly_bean">

    <ImageView
        android:id="@+id/desc_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="false"
        android:layout_below="@+id/desc_name"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_marginTop="10dp"
        android:adjustViewBounds="false"
        android:contentDescription="@string/this_desc_image"
        android:cropToPadding="false"
        android:maxHeight="100dp"
        android:maxWidth="150dp"
        android:minHeight="100dp"
        android:minWidth="150dp"
        android:src="@drawable/geometry" />

    <TextView
        android:id="@+id/desc_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_toLeftOf="@+id/desc_image_number"
        android:fontFamily="sans-serif-condensed"
        android:gravity="center"
        android:minLines="3"
        android:text="@string/for_test_name_lesson"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textSize="20sp"
        android:textStyle="normal|bold" />


    <ImageView
        android:id="@+id/desc_image_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_margin="5dp"
        android:contentDescription="@string/description_for_image_number"
        app:srcCompat="@drawable/lesson_number_0" />

    <TextView
        android:id="@+id/desc_time1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/desc_image"
        android:layout_marginLeft="5dp"
        android:layout_toRightOf="@+id/desc_image"
        android:fontFamily="sans-serif-condensed"
        android:text="@string/for_test_time1" />

    <TextView
        android:id="@+id/desc_time2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/desc_time1"
        android:layout_marginLeft="5dp"
        android:layout_toEndOf="@+id/desc_image"
        android:layout_toRightOf="@+id/desc_image"
        android:fontFamily="sans-serif-condensed"
        android:text="@string/for_test_time2" />

    <TextView
        android:id="@+id/desc_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="false"
        android:layout_alignWithParentIfMissing="false"
        android:layout_below="@+id/desc_time2"
        android:layout_marginLeft="5dp"
        android:layout_toRightOf="@+id/desc_image"
        android:fontFamily="sans-serif-condensed"
        android:text="@string/for_test_description_lesson"
        android:textStyle="normal|bold|italic" />

    <TextView
        android:id="@+id/desc_information"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/desc_image"
        android:layout_marginTop="10dp"
        android:fontFamily="sans-serif-condensed"
        android:text="@string/information_about_the_lesson"
        android:textAlignment="center"
        android:textSize="15sp"
        android:textStyle="normal|bold" />

    <TextView
        android:id="@+id/desc_value_name_teachers"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/desc_information"
        android:layout_marginLeft="5dp"
        android:fontFamily="sans-serif-condensed"
        android:text="@string/teachers_name"
        android:textStyle="normal|bold" />

    <TextView
        android:id="@+id/desc_name_teachers"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/desc_value_name_teachers"
        android:layout_marginLeft="5dp"
        android:fontFamily="serif"
        android:text="@string/for_test_teachers_lesson"
        android:textAlignment="center"
        android:textStyle="normal|italic" />

    <TextView
        android:id="@+id/desc_value_name_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/desc_name_teachers"
        android:layout_marginLeft="5dp"
        android:fontFamily="sans-serif-condensed"
        android:text="@string/time"
        android:textStyle="normal|bold" />

    <TextView
        android:id="@+id/desc_until_the_start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/desc_value_name_time"
        android:layout_alignStart="@+id/desc_value_name_time"
        android:layout_below="@+id/desc_value_name_time"
        android:fontFamily="sans-serif-condensed"
        android:text="@string/example_time" />

    <TextView
        android:id="@+id/desc_until_the_end"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/desc_value_name_time"
        android:layout_alignStart="@+id/desc_value_name_time"
        android:layout_below="@+id/desc_until_the_start"
        android:fontFamily="sans-serif-condensed"
        android:text="@string/example_time" />


</RelativeLayout>